--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="imgs/phlox icon.png" type="image/x-icon">
   </head>
   <body>
     <header>
